need to fix the blocks in main to include the content instead of the content spilling out?

--- a/style.css
+++ b/style.css
@@ -63,11 +63,13 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    flex: 1 0 auto;
 }
 .squares {
     display: flex;
     gap:20px;
     flex-wrap: wrap;
+    flex: 1 0 auto;
 }
 .quote {
     display: flex;
@@ -117,7 +119,10 @@ a {
     border-width: 5px;
     border-color: orangered;
     border-style: solid;
-    flex: 0 0 auto;
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 .callshell {
     background-color: #f9faf8;
@@ -151,4 +156,13 @@ a {
     color: #f9faf8;
     border-radius: 5px;
     border-style: solid;
+}
+.squares img {
+    width: 150px;
+    height: auto;
+}
+.module p {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
